# jmes-contracts

./: .gitignore  Cargo.toml  optimize.sh  package-lock.json
contracts/art-dealer/: Cargo.toml
contracts/art-dealer/examples/: schema.rs
contracts/art-dealer/schema/: config_response.json  execute_msg.json  instantiate_msg.json
contracts/art-dealer/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/art-nft/: Cargo.toml
contracts/art-nft/examples/: schema.rs
contracts/art-nft/src/: execute.rs
contracts/artist-curator/: Cargo.toml
contracts/artist-curator/schema/: config_response.json
contracts/artist-curator/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/artist-nft/: Cargo.toml
contracts/artist-nft/examples/: schema.rs
contracts/artist-nft/src/: execute.rs  lib.rs
contracts/bjmes-token/: Cargo.toml
contracts/bjmes-token/schema/: bjmes-token.json
contracts/bjmes-token/src/: allowances.rs  contract.rs  enumerable.rs  lib.rs  msg.rs  state.rs
contracts/bjmes-token/src/multitest/: contract.rs
contracts/bjmes-token/ts/: BjmesToken.client.ts  BjmesToken.types.ts  bundle.ts
contracts/cw721-base/: Cargo.toml
contracts/cw721-metadata-onchain/: Cargo.toml
contracts/dao/: Cargo.toml
contracts/dao-members/: Cargo.toml
contracts/dao-members/.cargo/: config
contracts/dao-members/schema/: dao-members.json
contracts/dao-members/schema/raw/: instantiate.json  query.json  response_to_config.json
contracts/dao-members/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  tests.rs
contracts/dao-members/src/multitest/: contract.rs
contracts/dao-multisig/: Cargo.toml
contracts/dao-multisig/schema/: dao-multisig.json
contracts/dao-multisig/schema/raw/: instantiate.json  query.json  response_to_config.json  response_to_proposal.json  response_to_reverse_proposals.json
contracts/dao-multisig/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/dao-multisig/src/multitest/: contract.rs
contracts/dao/examples/: schema.rs
contracts/dao/schema/: dao.json
contracts/dao/src/: contract.rs  msg.rs  state.rs
contracts/dao/src/multitest/: contract.rs
contracts/dao/ts/: Dao.client.ts  Dao.types.ts  bundle.ts
contracts/distribution/: Cargo.toml
contracts/distribution/examples/: schema.rs
contracts/distribution/schema/: config_response.json  execute_msg.json  grant_response.json  grants_response.json  instantiate_msg.json  query_msg.json
contracts/distribution/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/distribution/src/multitest/: contract.rs
contracts/governance/: Cargo.toml
contracts/governance/.cargo/: config
contracts/governance/examples/: schema.rs
contracts/governance/schema/: config_response.json  core_slots_response.json  cw20_hook_msg.json  execute_msg.json  governance_core_slots_response.json  instantiate_msg.json  period_info_response.json  proposal_msg.json  proposal_response.json  proposals_response.json  query_msg.json  winning_grants_response.json
contracts/governance/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  state2.rs
contracts/governance/src/multitest/: contract.rs  tests.rs
contracts/governance/tests/: integration.rs
contracts/identityservice/: Cargo.toml  NOTICE
contracts/identityservice/.cargo/: config
contracts/identityservice/examples/: schema.rs
contracts/identityservice/schema/: daos_response.json  execute_msg.json  get_identity_by_name_response.json  get_identity_by_owner_response.json  identity.json  identity_response.json  instantiate_msg.json  query_msg.json
contracts/identityservice/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/identityservice/src/multitest/: contract.rs  tests.rs
e2e/: .gitignore  .local.env  .localterra.env  .mocharc.yml  README.md  jsconfig.json  package-lock.json  package.json  tsconfig.json
e2e/client/: ArtDealer.client.ts  ArtDealer.react-query.ts  ArtDealer.types.ts  DaoMembers.client.ts  DaoMembers.react-query.ts  DaoMembers.types.ts  DaoMultisig.client.ts  DaoMultisig.react-query.ts  DaoMultisig.types.ts  Distribution.client.ts  Distribution.react-query.ts  Distribution.types.ts  Governance.client.ts  Governance.react-query.ts  Governance.types.ts  Identityservice.client.ts  Identityservice.react-query.ts  Identityservice.types.ts  index.ts
e2e/fixtures/: fixtures.js
e2e/lib/: createClient.js  createUser.js  getAttribute.js  readCodeIds.js  readContractAddrs.js  toBase64.js
e2e/tests/: distribution.spec.ts  e2e.spec.ts  identityservice.spec.ts
scripts/: .gitignore  .local.env  .localterra.env  deploy.js  generate.js  optimize.sh  package-lock.json  package.json  schema.sh  upload.js
scripts/cache/: .gitignore
scripts/lib/: createLCDClient.js  createUser.js  executeMsg.js  findNewContractFiles.js  instantiateContracts.js  readCachedContractChecksums.js  readNewContractChecksums.js  uploadContracts.js  writeCachedContractChecksums.js
ts-codegen/: index.js  package-lock.json  package.json
