[package]
name = "bjmes-token"
version = "0.15.0"
authors = ["blockheist <blockheist@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
tests = ["library", "cw-multi-test"]

[dependencies]
cw-multi-test = { version = "0.15.0", optional = true } 
cosmwasm-schema = { version = "1.1.0" }
cw-utils = { path = "../../packages/utils", version = "0.15.0" }
cw2 = { path = "../../packages/cw2", version = "0.15.0" }
cw20 = { path = "../../packages/cw20", version = "0.15.0" }
cw-storage-plus = { path = "../../packages/storage-plus", version = "0.15.0" }
cosmwasm-std = { version = "1.1.0" }
schemars = "0.8.1"
semver = "1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cw-multi-test = {  version = "0.15.0" }
