[package]
name          = "cw721-metadata-onchain"
description   = "Example extending CW721 NFT to store metadata on chain"
authors       = [
  "Ethan Frey <ethanfrey@users.noreply.github.com>",
  "Orkun Külçe <orkun@deuslabs.fi>",
]
version       = "0.17.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/CosmWasm/cw-nfts"
homepage      = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"
rust-version  = "1.65"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.2.1"
cosmwasm-std    = "1.2.1"
cw2             = { version = "1.0.1", path = "../../packages/cw2" }
cw721           = { version = "0.17.0", path = "../../packages/cw721" }
cw721-base-016  = { version = "0.16.0", package = "cw721-base",features = ["library"] }
cw721-base      = { version = "0.17.0", path = "../cw721-base",features = ["library"] }

schemars        = "0.8.11"
serde           = { version = "1.0.152", default-features = false, features = ["derive"] }

