[package]
name = "dao-members"
version = "0.16.0"
authors = ["blockheist@gmail.com"]
edition = "2018"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
tests = ["library", "cw-multi-test"]

[dependencies]
cw-multi-test = { git = "https://github.com/blockheist/cw-multi-test.git", branch = "supply_query_workaround", version = "0.16.5", optional = true}
cosmwasm-schema = { version = "1.1.0" }
cw-utils = {  version = "0.16.0" }
cw2 = {  version = "0.16.0" }
cw4 = {  version = "0.16.0" }
jmes = {path = "../../packages/jmes", version = "0.14.0"}
cw-controllers = {  version = "0.16.0" }
cw-storage-plus = {  version = "0.16.0" }
cosmwasm-std = { version = "1.1.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }


[dev-dependencies]
cw-multi-test = { git = "https://github.com/blockheist/cw-multi-test.git", branch = "supply_query_workaround", version = "0.16.5"}