[package]
name = "dao-multisig"
version = "0.16.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Implementing cw3 with multiple voting patterns and dynamic groups"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
tests = ["library", "cw-multi-test"]

[dependencies]
cw-multi-test = { git = "https://github.com/blockheist/cw-multi-test.git", branch = "supply_query_workaround", version = "0.16.5", optional = true}
cosmwasm-schema = { version = "1.1.0" }
cw-utils = {  version = "0.16.0" }
cw2 = { version = "0.16.0" }
cw3 = { version = "0.16.0" }
cw3-fixed-multisig = { version = "0.16.0", features = ["library"] }
cw4 = { version = "0.16.0" }
cw-storage-plus = {  version = "0.16.0" }
cosmwasm-std = { version = "1.1.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cw4-group = {  version = "0.16.0" }
cw-multi-test = { git = "https://github.com/blockheist/cw-multi-test.git", branch = "supply_query_workaround", version = "0.16.5" }
