[package]
name = "dao"
version = "0.15.0"
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.1.0" }
cw-utils = { path = "../../packages/utils", version = "0.15.0" }
cw2 = { path = "../../packages/cw2", version = "0.15.0" }
cw3 = { path = "../../packages/cw3", version = "0.15.0" }
jmes = { path = "../../packages/jmes", version = "0.14.0" }
cw-storage-plus = { path = "../../packages/storage-plus", version = "0.15.0" }
cosmwasm-std = { version = "1.1.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cw20 = { path = "../../packages/cw20", version = "0.15.0" }
cw-multi-test = { path = "../../packages/multi-test", version = "0.15.0" }
