[package]
name = "distribution"
version = "0.15.0"
authors = ["blockheist <blockheist@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
tests = ["library", "cw-multi-test"]


[dependencies]
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
cw-multi-test = { version = "0.15.0", optional = true } 
cw-storage-plus = "0.14.0"
cw2 = "0.15.0"
schemars = "0.8.10"
artist-nft = { path = "../artist-nft", version = "0.14.0", features = [
  "library",
] }
identityservice = { path = "../identityservice", version = "0.1.0", features = [
  "library",
] }
cw20 = "0.15.0"
serde = { version = "1.0.140", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
cw-utils = "0.15.0"
prost = "0.11.0"
cw3 = "0.15.0"
cw721="0.15.0"


[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw-multi-test = "0.15.0"
