[package]
name = "governance"
version = "0.1.1"
authors = ["blockheist <blockheist@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
tests = ["library", "cw-multi-test"]

[dependencies]
cosmwasm-std = { version = "1.0.0"}
cw2 = "0.16"
cw20 = "0.16"
cw-storage-plus = "0.16.0"
cw-multi-test = { version = "0.16.0", optional = true }
serde = { version = "1.0.140", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
cw-utils = "0.16.0" 
schemars = "0.8.10"
artist-nft = { path = "../artist-nft", version = "0.14.0", features = [
  "library",
]  }
art-nft = { path = "../art-nft", version = "0.14.0", features = [
  "library",
]  }
bjmes-token = { path = "../bjmes-token", version = "0.15.0", features = [
  "library"
]  }
artist-curator = { path = "../artist-curator", version = "0.14.0", features = [
  "library",
]  }
distribution = { path = "../distribution", version = "0.15.0", features = [
  "library"
]  }
identityservice = { path = "../identityservice", version = "0.1.0", features = [
  "library"
]  }
jmes = { path = "../../packages/jmes", version = "0.14.0", features = [
  "library",
]  }

[dev-dependencies]
cw-multi-test = "0.16.0"
cw3 ="0.16.0"
cw4 = "0.16.0"
cosmwasm-schema = { version = "1.0.0" }
identityservice = { path = "../identityservice", version = "0.1.0", features = [
  "tests"
]  }
distribution = { path = "../distribution", version = "0.15.0", features = [
  "tests"
]  }
bjmes-token = { path = "../bjmes-token", version = "0.15.0", features = [
  "tests"
]  }
jmes = { path = "../../packages/jmes", version = "0.14.0", features = [
  "tests",
]  }
dao-members = { path = "../dao-members", version = "0.16.0", features = [
  "tests"
]  }
dao-multisig = { path = "../dao-multisig", version = "0.16.0", features = [
  "tests"
]  }