[package]
name = "governance"
version = "0.1.1"
authors = ["blockheist <blockheist@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
tests = ["library", "cw-multi-test"]

[dependencies]
cosmwasm-std = { version = "1.1.5", features = ["cosmwasm_1_1"]}
# cosmwasm-std = { version = "1.1.5"}
cw2 = "0.16"
cw4 = {  version = "0.16.0" }
cw3 = {  version = "0.16.0" }
cw20 = "0.16"
cw-storage-plus = "0.16.0"
cw-multi-test = { git = "https://github.com/blockheist/cw-multi-test.git", branch = "supply_query_workaround", version = "0.16.5", optional = true }
serde = { version = "1.0.140", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
cw-utils = "0.16.0" 
schemars = "0.8.10"
art-dealer = { path = "../art-dealer", version = "0.14.0", features = [
  "library",
]  }
identityservice = { path = "../identityservice", version = "0.1.0", features = [
  "library"
]  }
dao-members = { path = "../dao-members", version = "0.16.0", features = [
  "library"
]  }
dao-multisig = { path = "../dao-multisig", version = "0.16.0", features = [
  "library"
]  }
jmes = { path = "../../packages/jmes", version = "0.14.0", features = [
  "library",
]  }

[dev-dependencies]

cw-multi-test = { git = "https://github.com/blockheist/cw-multi-test.git", branch = "supply_query_workaround", version = "0.16.5"}
cw3 ="0.16.0"
cosmwasm-schema = { version = "1.0.0" }
identityservice = { path = "../identityservice", version = "0.1.0", features = [
  "tests"
]  }
jmes = { path = "../../packages/jmes", version = "0.14.0", features = [
  "tests",
]  }
dao-members = { path = "../dao-members", version = "0.16.0", features = [
  "tests"
]  }
dao-multisig = { path = "../dao-multisig", version = "0.16.0", features = [
  "tests"
]  }