[package]
name = "identityservice"
version = "0.1.0"
authors = ["blockheist <blockheist@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
tests = ["library", "cw-multi-test"]

# [package.metadata.scripts]
# optimize = """docker run --rm -v "$(pwd)":/code \
#   --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
#   --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
#   cosmwasm/rust-optimizer:0.12.6
# """

[dependencies]
cosmwasm-std = "1.0.0"
cw-multi-test = { git = "https://github.com/blockheist/cw-multi-test.git", branch = "supply_query_workaround", version = "0.16.5", optional = true}
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.16.0"
cw2 = "0.16.0"
cw4 = "0.16.0"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
dao-members = { path = "../dao-members", version = "0.16.0", features = ["library"]}
dao-multisig = { path = "../dao-multisig", version = "0.16.0", features = ["library"]  }
jmes = { path = "../../packages/jmes", version = "0.14.0", features = ["library"] }
cw-utils = {  version = "0.16.0" }
cw3 = { path = "../../packages/cw3", version = "0.15.0" }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = { git = "https://github.com/blockheist/cw-multi-test.git", branch = "supply_query_workaround", version = "0.16.5"}
dao-members = { path = "../dao-members", version = "0.16.0", features = [
  "tests"
]  }
dao-multisig = { path = "../dao-multisig", version = "0.16.0", features = [
  "tests"
]  }
jmes = { path = "../../packages/jmes", version = "0.14.0", features = ["tests"]}